Add sophisticated web UI with database management
Features:
- Modern HTML5-based web interface (no middleware complexity)
- Drag & drop audio file upload
- Text consultation input
- Full CRUD operations for community database
- Real-time search and filtering
- Visual recommendation cards with AI reasoning
- Performance metrics dashboard
- Built-in comprehensive help documentation
- Responsive design (desktop/tablet/mobile)

Technical Implementation:
- Lightweight Flask backend (app.py)
- Pure JavaScript frontend (no frameworks)
- Clean card-based UI design
- RESTful API endpoints
- Direct Excel database integration

Files Added:
- app.py - Flask web server
- templates/index.html - Main UI
- static/css/style.css - Modern responsive styles
- static/js/app.js - Frontend logic
- WEB_UI_GUIDE.md - Detailed user guide
- WEB_UI_README.md - Quick reference
- START_WEB_UI.bat - Windows startup script

Files Modified:
- README.md - Added web UI option
- requirements.txt - Added Flask dependencies

Designed for non-technical users with:
- No command line required
- Intuitive drag & drop interface
- Visual feedback and loading states
- In-app help documentation
- Error handling with user-friendly messages

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,7 @@ gspread>=5.12.0             # Google Sheets API client
 google-auth>=2.23.4         # Google authentication
 google-auth-oauthlib>=1.1.0 # OAuth for Google APIs
 google-auth-httplib2>=0.1.1 # HTTP library for Google Auth
+
+# Web Interface
+Flask>=3.0.0                # Lightweight web framework
+Werkzeug>=3.0.0            # WSGI utility library (Flask dependency)
